# Gravity_pinpong

./: ReadMe.md  gravity_in_plane_2D.c  gravity_in_plane_2D.py  gravity_in_square.py
application/: CMakeLists.txt  pinpong_in_plane_2D.c
application/pinpong_in_plane_2D/: CMakeLists.txt  pinpong_in_plane_2D.c
application/pinpong_in_plane_2D/postporocessing/: postprocessing.py
application/pinpong_in_plane_3D/: CMakeLists.txt  pinpong_in_plane_3D.c
application/pinpong_in_plane_3D/postporocessing/: find_R_minmax.py  init_param_to_R_minmax.txt  postprocessing.ipynb  postprocessing.py
application/postporocessing/: postprocessing.py
include/: basic_linalg.h  constants.h  general_ellipse_properties.h  initialize.h  saving_data.h  step.h
src/: basic_linalg.c  general_ellipse_properties.c  initialize.c  saving_data.c  step.c
